# appcenter

./: .travis.yml  CMakeLists.txt  README.md  config.vala.cmake  config.vala.in  meson.build  meson_options.txt
data/: CMakeLists.txt  apphive.appdata.xml.in  apphive.desktop.in.in  apphive.gschema.xml  application.css  application.css.in  io.elementary.appcenter.appdata.xml.in.in  io.elementary.appcenter.desktop.in.in  io.elementary.appcenter.gresource.xml.in  io.elementary.appcenter.gschema.xml  io.elementary.appcenter.service.in  meson.build
data/icons/: CMakeLists.txt  categories.gresource.xml  categories.gresource.xml.in  meson.build
data/styles/: application.css
node/: index.js
po/: meson.build
src/: Application.vala  CMakeLists.txt  MainWindow.vala  Settings.vala  meson.build
src/Core/: BackendAggregator.vala  ChangeInformation.vala  Client.vala  Houston.vala  Package.vala  SnapBackend.vala  SnapClient.vala  SnapPackage.vala  StarCache.vala  UpdateManager.vala
src/Dialogs/: UninstallConfirmDialog.vala  UninstallFailDialog.vala  UpdateFailDialog.vala
src/Views/: AppInfoView.vala  AppListUpdateView.vala  AppListView.vala  CategoryView copy.vala  CategoryView.vala  Homepage.vala  InstalledView.vala
src/Widgets/: Banner.vala  CategoryFlowBox.vala  CategoryItem.vala  CategorySidebar.vala  HumbleButton.vala  Selector.vala  StarButton.vala  Switcher.vala
src/Widgets/AppContainers/: AbstractAppContainer.vala  AbstractPackageRowGrid.vala
src/Widgets/Carousel/: Carousel.vala  CarouselItem.vala
vapi/: snapd-glib.vapi
