appcenter_files = files(
    'Application.vala',
    'MainWindow.vala',
    'Settings.vala',
    'SuspendControl.vala',
    'Core/ChangeInformation.vala',
    'Core/Client.vala',
    'Core/ComponentValidator.vala',
    'Core/Houston.vala',
    'Core/Package.vala',
    'Core/Task.vala',
    'Core/UpdateManager.vala',
    'Dialogs/MessageDialog.vala',
    'Dialogs/RestartDialog.vala',
    'Dialogs/StripeDialog.vala',
    'Services/DBusInterfaces.vala',
    'Services/DBusServer.vala',
    'Views/AppInfoView.vala',
    'Views/AppListUpdateView.vala',
    'Views/AppListView.vala',
    'Views/Homepage.vala',
    'Views/InstalledView.vala',
    'Views/SearchView.vala',
    'Views/View.vala',
    'Widgets/AbstractAppList.vala',
    'Widgets/AppListRow.vala',
    'Widgets/Banner.vala',
    'Widgets/CategoryFlowBox.vala',
    'Widgets/CategoryItem.vala',
    'Widgets/HumbleButton.vala',
    'Widgets/PackageRow.vala',
    'Widgets/ReleaseListBox.vala',
    'Widgets/ReleaseRow.vala',
    'Widgets/SharePopover.vala',
    'Widgets/Switcher.vala',
    'Widgets/UpdateHeaderRow.vala',
    'Widgets/AppContainers/AbstractAppContainer.vala',
    'Widgets/AppContainers/AbstractPackageRowGrid.vala',
    'Widgets/AppContainers/InstalledPackageRowGrid.vala',
    'Widgets/AppContainers/ListPackageRowGrid.vala',
    'Widgets/Carousel/AuthorCarousel.vala',
    'Widgets/Carousel/CarouselItem.vala',
    'Widgets/Carousel/Carousel.vala'
)

executable(
    meson.project_name(),
    config_vala,
    appcenter_files,
    dependencies: dependencies,
    install : true
)
